<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/navProfile">
    <fragment
        android:id="@+id/navCalendar"
        android:name="com.componytest.timesheet.calendar.CalendarFragment"
        android:label="@string/calendar"
        tools:layout="@layout/fragment_calendar"/>

    <fragment
        android:id="@+id/navJobMarks"
        android:name="com.componytest.timesheet.jobMarks.JobMarksFragment"
        android:label="@string/jobMarks"
        tools:layout="@layout/fragment_job_marks"/>

    <fragment
        android:id="@+id/navProfile"
        android:name="com.componytest.timesheet.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile">
        <action
            android:id="@+id/action_navProfile_to_departmentsFragment"
            app:destination="@id/departmentsFragment" />
    </fragment>

    <fragment
        android:id="@+id/departmentsFragment"
        android:name="com.componytest.timesheet.departments.DepartmentsFragment"
        android:label="@string/departments"
        tools:layout="@layout/fragment_departments"/>
</navigation>