<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <data>
        <variable
            name="user"
            type="com.componytest.timesheet.profile.Employee" />
    </data>
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/ivUserImage"
            android:layout_width="70dp"
            android:layout_height="70dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="20dp"
            app:civ_border_color="@color/black"
            android:src="@drawable/icon_profile_gray_24"/>

        <TextView
            android:id="@+id/tvUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/ivUserImage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:text='@{user.firstName + " " + user.lastName}'
            android:maxLines="2"/>

        <View
            android:id="@+id/profileDelimiter"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintTop_toBottomOf="@id/tvUserName"
            android:background="@color/black"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/tvTitleDepartment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/profileDelimiter"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="20dp"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:text="@string/department"
            android:maxLines="2"/>

        <TextView
            android:id="@+id/tvDepartment_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/profileDelimiter"
            app:layout_constraintStart_toEndOf="@id/tvTitleDepartment"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            android:layout_margin="20dp"
            android:textSize="14sp"
            android:maxLines="2"
            android:text='@{user.department == "" ? "-" : user.department}'/>

        <TextView
            android:id="@+id/tvTitleJobPosition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tvDepartment_profile"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="20dp"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:text="@string/jobPosition"
            android:maxLines="2"/>

        <TextView
            android:id="@+id/tvJobPosition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tvDepartment_profile"
            app:layout_constraintStart_toEndOf="@id/tvTitleDepartment"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            android:layout_margin="20dp"
            android:textSize="14sp"
            android:text='@{user.jobPosition}'
            android:maxLines="2"/>

        <Button
            android:id="@+id/btnDepartments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tvJobPosition"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="20dp"
            android:text="@string/departments"
            android:visibility="gone"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>