<?xml version="1.0" encoding="utf-8"?>
    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <LinearLayout
            android:id="@+id/calendarContainer"
            android:layout_width="match_parent"
            android:layout_height="330dp"
            app:layout_constraintTop_toTopOf="parent"
            android:orientation="vertical"/>

        <View
            android:id="@+id/sampleWorkingDay"
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:layout_constraintTop_toBottomOf="@id/calendarContainer"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="20dp"
            android:background="@color/black"/>
        <View
            android:id="@+id/sampleWorkingDay2"
            android:layout_width="28dp"
            android:layout_height="28dp"
            app:layout_constraintTop_toBottomOf="@id/calendarContainer"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="21dp"
            android:background="@color/white"/>


        <View
            android:id="@+id/delimiterWorkingDay"
            android:layout_width="20dp"
            android:layout_height="5dp"
            app:layout_constraintTop_toBottomOf="@id/calendarContainer"
            app:layout_constraintStart_toEndOf="@id/sampleWorkingDay"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:background="@color/black"/>

        <TextView
            android:id="@+id/tvWorkingDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/calendarContainer"
            app:layout_constraintStart_toEndOf="@id/delimiterWorkingDay"
            android:layout_marginStart="20dp"
            android:layout_marginTop="25dp"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:text="@string/workingDay"/>


        <View
            android:id="@+id/sampleRestDay"
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:layout_constraintTop_toBottomOf="@id/sampleWorkingDay"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:background="@color/orange"/>

        <View
            android:id="@+id/delimiterRestDay"
            android:layout_width="20dp"
            android:layout_height="5dp"
            app:layout_constraintTop_toBottomOf="@id/sampleWorkingDay"
            app:layout_constraintStart_toEndOf="@id/sampleRestDay"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:background="@color/black"/>

        <TextView
            android:id="@+id/tvRestDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/sampleWorkingDay"
            app:layout_constraintStart_toEndOf="@id/delimiterRestDay"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:text="@string/restDay"/>



        <View
            android:id="@+id/sampleHoliday"
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:layout_constraintTop_toBottomOf="@id/sampleRestDay"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:background="@color/red"/>

        <View
            android:id="@+id/delimiterHoliday"
            android:layout_width="20dp"
            android:layout_height="5dp"
            app:layout_constraintTop_toBottomOf="@id/sampleRestDay"
            app:layout_constraintStart_toEndOf="@id/sampleHoliday"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:background="@color/black"/>

        <TextView
            android:id="@+id/tvHoliday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/sampleRestDay"
            app:layout_constraintStart_toEndOf="@id/delimiterHoliday"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:text="@string/holiday"/>

        <View
            android:id="@+id/samplePreHoliday"
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:layout_constraintTop_toBottomOf="@id/sampleHoliday"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:background="@color/yellow"/>

        <View
            android:id="@+id/delimiterPreHoliday"
            android:layout_width="20dp"
            android:layout_height="5dp"
            app:layout_constraintTop_toBottomOf="@id/sampleHoliday"
            app:layout_constraintStart_toEndOf="@id/samplePreHoliday"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:background="@color/black"/>

        <TextView
            android:id="@+id/tvPreHoliday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/sampleHoliday"
            app:layout_constraintStart_toEndOf="@id/delimiterPreHoliday"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:text="@string/preHoliday"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>